--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,9 +20,14 @@ android {
     signingConfigs {
         release {
             //storeFile file("../keystore/my-release-key.keystore")  // Adjust path as needed
-            storePassword System.getenv("KEYSTORE_PASSWORD")
-            keyAlias System.getenv("KEY_ALIAS")
-            keyPassword System.getenv("KEY_PASSWORD")
+//            storeFile file(System.getenv("KEYSTORE_FILE"))
+//            storePassword System.getenv("KEYSTORE_PASSWORD")
+//            keyAlias System.getenv("KEY_ALIAS")
+//            keyPassword System.getenv("KEY_PASSWORD")
+            storeFile file(project.hasProperty("keystoreFile") ? project.property("keystoreFile") : "MISSING")
+            storePassword project.property("keystorePassword")
+            keyAlias project.property("keyAlias")
+            keyPassword project.property("keyPassword")
         }
     }
 
